--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mark 14</title>
 </head>
 <body>
-    <h1>Mark 14- Stock Purchases</h1>
+    <h1 id="heading">Mark 14- Stock Purchases</h1>
     <label>Intial Price: </label>
     <input id="initial-price" type="number" placeholder="Enter initial price"/>
     <label>Quantity of Stocks: </label>
