Validate the input field

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1 id="heading">Mark 14- Stock Purchases</h1>
     <label>Intial Price: </label>
-    <input id="initial-price" type="number" placeholder="Enter initial price"/>
+    <input id="initial-price" type="number" min="1" placeholder="Enter initial price"/>
     <label>Quantity of Stocks: </label>
-    <input id="stocks-quantity" type="number" placeholder="Enter number of stocks bought"/>
+    <input id="stocks-quantity" type="number" min="1" placeholder="Enter number of stocks bought"/>
     <label>Current Price: </label>
-    <input id="current-price" type="number" placeholder="Enter current  price of stocks"/>
+    <input id="current-price" type="number" min="1" placeholder="Enter current  price of stocks"/>
     <button id="result-btn">Tell Me!</button>
     <div id="output-box"></div>
 
